package proxy.cglib;

//public class ProxyFactory implements MethodInterceptor{
//
//    //维护一个对象
//    private Object target;
//
//    //构造器  传入一个被代理的对象
//    public ProxyFactory(Object target) {
//        this.target = target;
//    }
//
//    //返回一个代理对象  是target对象的代理对象(即子类对象)
//    public Object getProxyInstance(){
//
//        return null;
//    }
//
//    public Object intercept(){
//        return null;
//    }
//
//
//}
